# SerialPort-Streaming

./: .gitignore  Cargo.toml  items_pb2.py  pyclient.py
log/2024/5/21/test/: 045815.00  045900.00  050000.00  050100.00  050200.00  050400.00  050700.00  051000.00
log/2024/5/21/test2/: 050122.00  050300.00  050500.00  050600.00  050800.00  050900.00
src/: client.rs  items.proto  main.rs  models.rs
static/: index.html  main.css
