[package]
name = "warp-websockets-example"
version = "0.1.0"
authors = ["stefan.baumgartner <Stefan.Baumgartner@dynatrace.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
prost-build = { version = "0.5" }

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.1"
tokio-stream = "0.1.6"
futures = "0.3.15"
serialport = "4.3.0"
unicode-normalization = "0.1.19"
prost = "0.12"
tungstenite = "0.11.1"
serial2 = "0.2.22"