[package]
name = "tcp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.3.0"
env_logger = "0.6"
ws = '0.9.2'
websocket = "0.27.1"
chrono = "0.4.38"
tokio = "1.37.0"
byteorder = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
struct_iterable = "0.1.1"
